---------------------------------------------------------------------------------------------------
Version: 1.7.0
Date: 2025-08-24
  Features:
    - Added a belt merging option.
    - Added an option to give a belt planner after layout creation.
    - Improved belt lane throughput and usage overlay.
    - Added layout rotation keybind. (R and Shift+R by default)
    - Added dropdown select for qualities when there are more than 10.
    - Attempts add an extra power pole to connect power between lanes if its enough to bridge the gap.
  Optimizations:
    - Added performance scaling mod setting. (work done per tick)
    - Improved work done per tick.
  Bugfixes:
    - Various fixes in layouts.
    - Fixed crash when trying to add modules on a mining drill witout module slots.
  Translation:
    - Added German translation. (Thanks to Lucanoria)
---------------------------------------------------------------------------------------------------
Version: 1.6.35
Date: 2025-04-08
  Bugfixes:
    - Fixed output position handling when mining drills output to sides other than north.
---------------------------------------------------------------------------------------------------
Version: 1.6.34
Date: 2025-04-01
  Bugfixes:
    - Fixed missing inserter filter usage flag in Blueprint layout. (Thanks to marfenij for the pull request)
---------------------------------------------------------------------------------------------------
Version: 1.6.33
Date: 2025-02-19
  Bugfixes:
    - Fixed crash when using adjustable inserters in Blueprint layouts.
---------------------------------------------------------------------------------------------------
Version: 1.6.31
Date: 2025-01-29
  Bugfixes:
    - Update migration logic when loading saves from Factorio 1.1.
---------------------------------------------------------------------------------------------------
Version: 1.6.30
Date: 2024-12-29
  Translation:
    - Added French translation. (Thanks to Danura30082)