@@ -11,11 +11,13 @@ mining-patch-planner-shortcut=矿区规划器
 mining-patch-planner-keybind=打开矿区规划器
 
 [mod-setting-name]
+# mpp-performance-scaling=
 mpp-lane-filling-info-duration=矿道饱和度显示持续时间（秒）
 mpp-dump-heuristics-data=调试：导出状态信息以供检查
 
 [mod-setting-description]
 mpp-lane-filling-info-duration=在规划器 GUI 关闭后开始显示持续时间
+# mpp-performance-scaling=
 
 [mpp]
 quality_settings=质量设置
@@ -24,9 +26,6 @@ entity_filtering_mode=选项过滤\n通过 __CONTROL_KEY_SHIFT____CONTROL_STYLE_
 settings_frame=规划器设置
 blueprint_add_mode=添加蓝图
 show_non_electric_miners=显示非电动矿机
-force_pipe_placement=强制管道放置
-print_placement_info=打印放置信息
-display_lane_filling=ALT 模式下显示矿道饱和度覆盖。\nGUI 关闭后会淡出\n（持续时间可在 mod 设置中调整）
 
 settings_layout_label=布局类型
 settings_direction_label=布局方向
@@ -45,6 +44,7 @@ settings_layout_choice_simple=简单
 settings_layout_choice_compact=紧凑
 settings_layout_choice_super_compact=超紧凑
 settings_layout_choice_sparse=稀疏
+# settings_layout_choice_pipe=
 settings_layout_choice_logistics=物流
 settings_layout_choice_compact_logistics=紧凑物流
 settings_layout_choice_sparse_logistics=稀疏物流
@@ -61,6 +61,11 @@ choice_deconstruction=不拆除实体
 choice_ore_filtering=省略不需要的矿物
 choice_avoid_water=避免放置在水上
 choice_avoid_cliffs=避免放置在悬崖上
+choice_force_pipe_placement=强制管道放置
+choice_print_placement_info=打印放置信息
+choice_display_lane_filling=ALT 模式下显示矿道饱和度覆盖。\nGUI 关闭后会淡出\n（持续时间可在 mod 设置中调整）
+# choice_merge_belts=
+# choice_belt_planner=
 
 label_add_blueprint=插入蓝图
 label_insufficient_area=矿区面积不足，无法完全覆盖
@@ -68,6 +73,8 @@ label_no_fluid_mining=矿机不支持流体连接
 label_oversized_drill=超大矿机区域。\n创建布局可能需要一些时间
 label_not_available=此布局不可用
 label_belt_find_underground=未找到相关的地下传送带
+# label_rotate_keybind_tip=
+# label_right_click_to_clear=
 
 msg_miner_err_0=未选择合适的资源
 msg_miner_err_1_w=宽度过小，无法创建布局（最小宽度为 __1__）
@@ -83,6 +90,10 @@ msg_blueprint_no_miner=蓝图中未找到矿机
 msg_blueprint_different_miners=发现多种矿机类型：
 msg_blueprint_fatal_error=无法将蓝图复制到内部库存。请将存档与此错误报告给 mod 作者
 msg_blueprint_filtered_entity=蓝图中发现禁止的实体：
+# msg_belt_planner_err_create_planner_no_previous_state=
+# msg_belt_planner_err_previous_state=
+# msg_belt_planner_err_too_far=
+# msg_err_no_pipe_choice=
 
 msg_print_info_miner_placement=已放置 __1__ 个矿机 __plural_for_parameter__1__{1=钻机|rest=钻机}__，配备 __2__ __plural_for_parameter__2__{1=传送带|rest=传送带}__，覆盖 __3__ __plural_for_parameter__3__{1=资源|rest=资源}__。
 msg_print_info_miner_placement_no_lanes=已放置 __1__ 个矿机 __plural_for_parameter__1__{1=钻机|rest=钻机}__，覆盖 __2__ __plural_for_parameter__2__{1=资源|rest=资源}__。
@@ -92,3 +103,5 @@ msg_print_info_lane_saturation_bounds=矿道总量 __1__ - __2__
 msg_print_missed_resource=遗漏 __1__ __plural_for_parameter__1__{1=资源|rest=资源}__
 msg_print_cant_hide_last_choice=无法隐藏最后可用选项
 msg_print_cant_hide_current_choice=无法隐藏当前选定选项
+# msg_print_info_lane_throuput_total=
+# msg_print_info_lane_throuput_unused=
