@@ -5,9 +5,9 @@ Date: 2025-08-24
     - Added a belt merging option.
     - Added an option to give a belt planner after layout creation.
     - Improved belt lane throughput and usage overlay.
-    - Added layout rotation keybind. (R and Shift+R by default)
+    - Added keybind to rotate the layout direction. (R and Shift+R by default)
     - Added dropdown select for qualities when there are more than 10.
-    - Attempts add an extra power pole to connect power between lanes if its enough to bridge the gap.
+    - Attempts to add an extra power pole to connect power between lanes if its enough to bridge the gap.
   Optimizations:
     - Added performance scaling mod setting. (work done per tick)
     - Improved work done per tick.
@@ -16,6 +16,7 @@ Date: 2025-08-24
     - Fixed crash when trying to add modules on a mining drill witout module slots.
   Translation:
     - Added German translation. (Thanks to Lucanoria)
+    - Added Chinese translation. (Thanks to lzkgbld)
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.35
 Date: 2025-04-08
